--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "next.config.js",
-      "use": "@vercel/next"
-    }
-  ],
   "env": {
+    "NEXT_PUBLIC_API_BASE_URL": "http://localhost:4000",
+    "SERVICE_PORT": "3000",
     "DISABLE_ESLINT": "true"
   }
 }
